client/src/style.css
/* ====================================== */
/* PARENT CONTAINER */
/* ====================================== */

.container {
  display: flex;
  flex-direction: column;
  padding-right: 40vw;
  padding-left: 10vw;
  width: 800px;
  font-family: sans-serif;
  font-weight: lighter;
  background-color: #eee;
}

/* ====================================== */
/* TABBED AREA */
/* ====================================== */
#tabs {
  display: flex;
  flex-direction: row;
  background: #fff;
}

.tab {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 50%;
  height: 65px;
  background: #fff;
  padding: 16px 12px;
}

.tab:hover {
  cursor: pointer;
}

.tab-title {
  font-size: 14px;
}

.tab-num {
  font-weight: 600;
}

.inactive-tab {
  background-color: rgb(249, 249, 249);
  border: #e0e0e0 1px solid;
}

.active-tab {
  border-left: #e0e0e0 1px solid;
  border-top: #111 3px solid;
  background: #fff;
}

.active-title {
  font-weight: 600;
}

#review-icon {
  background-image: url('https://fec-images-6-18-20.s3-us-west-2.amazonaws.com/iconfinder_compose_write_pen_pencil_writing_5859800.png');
  background-repeat: no-repeat;
  background-size: contain;
  height: 25px;
  width: 25px;
  margin-bottom: 5px;
}

#qa-icon {
  background-image: url('https://fec-images-6-18-20.s3-us-west-2.amazonaws.com/iconfinder_Chatting_4200467.png');
  background-repeat: no-repeat;
  background-size: contain;
  height: 25px;
  width: 25px;
  margin-bottom: 5px;
}

/* ====================================== */
/* HEADER */
/* ====================================== */

.header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  background: #fff;
  padding-top: 13px;
  padding-bottom: 13px;
  font-size: 25px;
  font-weight: 500;
  letter-spacing: 0.5px;
  border-bottom: 1px solid #e0e0e0;
  padding-left: 20px;
  padding-right: 20px;
  background-color: #fff;
}

#subtitle {
  font-size: 15px;
}

.header-button {
  background: #000;
  color: #fff;
  border-radius: 5px;
  border: 1px solid #000;
  height: 40px;
  text-align: center;
  width: 120px;
}

.dropdown {
  width: 35px;
  background-color: #111;
  color: #fff;
  border-radius: 5px;
  border: 1px solid #000;
  height: 40px;
  border-left: 1px solid #fff;
}

.header-button:hover, .dropdown:hover {
  cursor: pointer;
}

/* ====================================== */
/* RATINGS, CHECKLISTS, RADIO LIST */
/* ====================================== */

#filter-container {
  display: flex;
  flex-direction: row;
  justify-content: left;
  height: 200px;
  background: #fff;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 15px;
  font-size: 13px;
}

input:hover, #lang-btn:hover {
  cursor: pointer;
}

.filter-header {
  font-weight: 500;
  margin-bottom: 15px;
}

.checklist-filter {
  display: flex;
  flex-direction: column;
  padding-left: 50px;
}

.rating-name {
  display: inline-block;
  width: 65px;
}

.rate-bar {
  margin-bottom: 4px;
}

.list-item {
  margin-bottom: 4px;
}

.spacer {
  margin-right: 3px;
}

.lang-num {
  color: #888;
}

#lang-btn {
  background: none;
  border: none;
  padding: 0;
  padding-left: 5px;
  font-weight: bold;
  text-align: left;
}

/* ====================================== */
/* POPULAR MENTIONS */
/* ====================================== */

.mention-on, .mention-off {
  border: 1px solid #111;
  border-radius: 5px;
  margin: 3px;
  text-align: center;
  height: 30px;
  padding-left: 9px;
  padding-right: 9px;
  font-size: 12px;
  font-weight: 300;
}

.mention-off {
  background: #fff;
  color: #111;
}

.mention-on {
  background: #111;
  color: #fff;
}

.mention-on:hover {
  background: #333;
  color: #fff;
  cursor: pointer;
}

.mention-off:hover {
  background: #e0e0e0;
  color: #111;
  cursor: pointer;
}

#popular-mentions {
  padding: 5px;
  padding-bottom: 12px;
  background: #fff;
  padding-left: 20px;
  padding-right: 20px;
}

#popular-mentions-title {
  font-size: 13px;
  font-weight: 500;
  margin-bottom: 13px;
}

/* ====================================== */
/* SEARCH */
/* ====================================== */

.search {
  display: flex;
  flex-direction: row;
  background-color: #fff;
  margin-top: 7px;
  margin-bottom: 7px;
  font-size: 14px;
  font-weight: 300;
  padding: 11px;
  text-align: center;
}

#search-icon {
  background-image: url('https://fec-images-6-18-20.s3-us-west-2.amazonaws.com/iconfinder_header-search-image_1540158.png');
  background-repeat: no-repeat;
  background-size: contain;
  width: 20px;
  height: 20px;
  margin-right: 8px;
}

#search-input {
  width: 100%;
  height: 100%;
  border: none;
}

.search-input:focus {
  border: 1px solid black;
  line-height: 20px;
}

#no-results {
  background-color: #fef8d0;
  border: #fad69f 1px solid;
  border-radius: 3px;
  padding: 12px 18px;
  font-size: 12px;
  line-height: 14px;
  margin-top: 10px;
  margin-bottom: 10px;
}

#clear-search {
  border-radius: 50%;
  background-color: #000;
  color: #fff;
  font-size: 8px;
  border: none;
  width: 16px;
  height: 16px;
  text-align: center;
}

#clear-search:hover {
  border-radius: 50%;
  background-color: #333;
  color: #fff;
  font-size: 8px;
  border: none;
  width: 16px;
  height: 16px;
  text-align: center;
  cursor: pointer;
}

/* ====================================== */
/* REVIEW AND QUESTION FEEDS */
/* ====================================== */

.page {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#qa-page {
  min-height: 60vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #fff;
  margin-bottom: 20px;
}

/* ====================================== */
/* REVIEW BLOCKS */
/* ====================================== */

.review {
  margin-bottom: 12px;
  background-color: #fff;
}

/* ====================================== */
/* REVIEW HEADER */
/* ====================================== */

.review-header {
  display: flex;
  flex-direction: row;
  padding: 10px;
  padding-left: 15px;
  padding-right: 15px;
}

.profile-image {
  width: 35px;
  height: 35px;
  border-radius: 50%;
  background-repeat: no-repeat;
  background-size: contain;
  margin-right: 15px;
}

.map-icon {
  display: inline-block;
  width: 20px;
  height: 20px;
  background-repeat: no-repeat;
  background-size: contain;
  background-image: url('https://fec-images-6-18-20.s3-us-west-2.amazonaws.com/iconfinder_Map_-_Location_Solid_Style_01_2216335.png');
}

.header-user-text {
  font-size: 14px;
  padding-bottom: 7px;
}

.header-user-info {
  font-size: 11px;
  color: #999;
  display: flex;
  flex-direction: row;
  align-items: center;
  height: 20px;
  text-align: center;
  padding-top: 5px;
}

.user-info-area {
  display: flex;
  flex-direction: row;
  text-align: center;
}

.username {
  font-weight: 500;
}

.user-num {
  font-weight: 600;
}

.dots {
  margin-left: auto;
  display: flex;
  flex-direction: column;
}

.dots button {
  background-color: #fff;
  border: none;
  font-weight: normal;
  font-size: 30px;
  line-height: 4px;
}

.dots button:hover {
  cursor: pointer;
}

.spacer-dot {
  display: inline-block;
  border-radius: 50%;
  width: 3px;
  height: 3px;
  background-color: #999;
  margin-left: 3px;
  margin-right: 3px;
}

.contributions-text, .helpful-text {
  margin-left: 2px;
}

/* ====================================== */
/* REVIEW BODY */
/* ====================================== */

.review-body {
  background-color: rgb(249, 249, 249);
  padding: 10px;
  padding-left: 15px;
  padding-right: 15px;
}

.button-area {
  display: flex;
  flex-direction: row;
}

.review-images {
  display: flex;
  flex-direction: row;
}

.image-container {
  height: 100px;
  flex-grow: 1;
}

.upload-image {
  height: 100%;
  width: 100%;
  background-repeat: no-repeat;
  background-size: cover;
  border: #fff solid 1px;
}

.rating-area {
  display: flex;
  flex-direction: row;
  padding-bottom: 10px;
}

.green-rating-circle {
  display: block;
  border-radius: 50%;
  background-color: #00aa6c;
  border: #00aa6c 1.5px solid;
  width: 10px;
  height: 10px;
  margin: 1px;
}

.empty-rating-circle {
  display: block;
  border-radius: 50%;
  border: #00aa6c 1.5px solid;
  background: #fff;
  width: 10px;
  height: 10px;
  margin: 1px;
}

.review-title {
  font-weight: 500;
  font-size: 17px;
  padding-bottom: 10px;
}

.review-text {
  font-size: 15px;
  padding-bottom: 10px;
  color: #555;
}

.read-more-button {
  background-color: rgb(249, 249, 249);
  color: #888;
  border: none;
  padding: 0;
  margin-bottom: 10px;
}

.read-more-btn-txt {
  text-decoration: underline dotted;
}

.read-more-button:hover {
  cursor: pointer;
}

.exp-date {
  font-size: 13px;
  padding-bottom: 10px;
}

.trip-type {
  font-size: 13px;
  padding-bottom: 10px;
}

.trip-type-title, .exp-date-title {
  font-weight: 500;
}

.disclaimer {
  border-top: #ccc solid 1px;
  padding-top: 5px;
  padding-bottom: 10px;
  font-size: 11px;
  color: #888;
  font-style: italic;
}

.helpful-button, .share-button {
  font-size: 12px;
  font-weight: 500;
  padding: 0;
  background: none;
  border: none;
  text-decoration: underline dotted;
  margin-right: 10px;
}

.helpful-button:hover, .share-button:hover {
  cursor: pointer;
}

.helpful-vote {
  color: #888;
  padding-bottom: 15px;
  font-size: 12px;
}

/* ====================================== */
/* REVIEW FOOTER */
/* ====================================== */

.review-footer {
  padding: 10px;
  padding-left: 15px;
  padding-right: 15px;
}

/* ====================================== */
/* NAV BAR */
/* ====================================== */

.inactive-page-button {
  background-color: #fff;
  border: none;
}

.active-page-button {
  background-color: #eee;
  border: none;
}

.inactive-page-button:hover, .active-page-button:hover, #prev-page:hover, #next-page:hover {
  cursor: pointer;
}

#prev-page:hover {
  background-color: #e0e0e0;
}

#next-page:hover {
  background-color: #333;
}

.nav-bar {
  display: flex;
  flex-direction: row;
  background-color: #fff;
  margin-bottom: 10px;
  padding: 10px;
  align-items: center;
}

#prev-page, #next-page {
  border: 1px solid #111;
  border-radius: 5px;
  margin: 3px;
  text-align: center;
  height: 30px;
  padding-left: 15px;
  padding-right: 15px;
  font-size: 13px;
  font-weight: 300;
}

#prev-page {
  background-color: #fff;
  margin-right: 10px;
}

#next-page {
  background-color: #000;
  margin-left: auto;
  color: #fff;
}

.page-num-area {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100%;
  max-width: 100%;
  overflow: hidden;
  margin-right: 10px;
}

/* ====================================== */
/* ASK-A-QUESTION POPUP */
/* ====================================== */

#recaptcha {
  background-image: url('https://fec-images-6-18-20.s3-us-west-2.amazonaws.com/Screen+Shot+2020-06-26+at+2.58.23+PM.png');
  background-repeat: no-repeat;
  background-size: contain;
  width: 275px;
  height: 70px;
}

.my-profile-image {
  background-image: url('https://fec-images-6-18-20.s3-us-west-2.amazonaws.com/profiles/img0.jpg');
  background-repeat: no-repeat;
  background-size: contain;
  width: 20px;
  height: 20px;
  border-radius: 50%;
}

#guideline-area {
  display: flex;
  flex-direction: row;
  align-items: center;
}

#posting-guidelines-arrow {
  margin-left: 2px;
  background-color: #111;
  width: 6px;
  height: 6px;
  transform: rotate(45deg);
}

